<resources>
    <string name="app_name">WhatsApp Status Downloader</string>
    <string name="app_name_alt">Status Downloader</string>
    <string name="save_all_status">Save All Status</string>
    <string name="settings">Settings</string>
    <string name="share">Share</string>
    <string name="help">Help</string>
    <string name="about_me">My name is Ismail Nurudeen.
        A creative android developer,I build smart problem solving apps.\n
    Learn more about me here</string>
    <string name="about_app">Download your favourite WhatsApp status and also control the WhatsApp status slide show easily</string>
    <string name="about">About</string>


    <!--AdMob values-->
    <string name="app_id">ca-app-pub-6262072701452947~7795108663</string>
    <string name="sample_banner_ad_unit">ca-app-pub-3940256099942544/6300978111</string>
    <string name="bottom_banner_ad_unit">ca-app-pub-6262072701452947/1393351849</string>
    <string name="fullscreen_ad_unit">ca-app-pub-6262072701452947/8051829774</string>

    <string name="no_status_txt">Oopps... There are no status available at the moment,\nClick the button below to go to WhatsApp and view a status,then come back here and download it</string>
    <string name="no_downloaded_status_txt">Oopps... You haven\'t downloaded any status yet,go to all status and download some</string>
    <string name="no_permission_txt">The app needs External Storage Permission to work,please grant permission to continue</string>
    <string name="no_whatsapp_txt">WhatsApp could not be detected!\n If you don\'t already have WhatsApp Installed,Click below to Download and Install WhatsApp</string>
    <string name="title_activity_settings">Settings</string>
    <string name="app_playstore_link_template">https://play.google.com/store/apps/details?id=</string>
    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="use_default_name_key">USE_DEFAULT_NAME</string>
    <string name="do_slide_show_key">DO_SLIDE_SHOW</string>
    <string name="show_video_controls_key">SHOW_VIDEO_CONTROLS</string>
    <string name="shared_prefs_name">xyz.ismailnurudeen.whatsappstatusstealer_preferences</string>
    <string name="slide_show_time_key">SLIDE_SHOW_TIME</string>
    <string name="slide_show_time_minmax">Min 5 secs,Max 60 secs</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="my_website">http://www.ismailnurudeen.xyz</string>
    <string name="market_id_template">market://details?id=</string>
    <string name="hide_downloads_key">prefs_hide_downloads</string>
    <string name="hide_downloaded_status_summary">Hide downloaded statuses from your phone gallery \nNote: hidden statuses would be lost when you unistall the app</string>
</resources>
